--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
               <div class="my-3">
                 <p id="my-form-status"></p>
                 <div class="loading">Loading</div>
-                <div class="error-message"></div>
+                <div class="error-message"> Opps! Something went wrong ! Try Again !!!</div>
                 <div class="sent-message">Your message has been sent. Thank you!</div>
               </div>
               <div class="text-center"><button type="submit">Send Message</button></div>
