--- a/index.html
+++ b/index.html
@@ -214,8 +214,8 @@
 
           <div class="col-lg-6 ">
             <iframe class="mb-4 mb-lg-0"
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1942.630129921709!2d84.4930798435354!3d27.612041998717697!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMjfCsDM2JzQzLjQiTiA4NMKwMjknMzcuMiJF!5e1!3m2!1sen!2snp!4v1606648574979!5m2!1sen!2snp"
-              frameborder="0" style="border:0; width: 100%; height: 384px;" allowfullscreen></iframe>
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d772.2684944872055!2d84.49291465412641!3d27.611716594820447!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3994eff0eebfc817%3A0x7f7502e19c24edd4!2sMainali%20Suppliers!5e1!3m2!1sen!2snp!4v1628952982002!5m2!1sen!2snp"
+                    frameborder="0" style="border:0; width: 100%; height: 384px;" allowfullscreen></iframe>
           </div>
 
           <div class="col-lg-6">
@@ -240,7 +240,7 @@
                 <p id="my-form-status"></p>
                 <div class="loading">Loading</div>
                 <div class="error-message"> Opps! Something went wrong ! Try Again !!!</div>
-                <div class="sent-message">Your message has been sent. Thank you!</div>
+                <div class="sent-message">Your message has been sent. Thank you! We will be with you soon !</div>
               </div>
               <div class="text-center"><button type="submit">Send Message</button></div>
             </form>
