--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
 
       <div class="logo">
         <h1 class="text-light"><a href="index.html"><span>Mainali Suppliers</span></a></h1>
-        <!-- <a href="index.html"><img src="assets/img//testimonials/testimonials-2.jpg" alt="" class="img-fluid"></a>
-      -->
+         <a href="index.html"><img src="assets/img/logo.jpg" alt="" class="img-fluid"></a>
       </div>
 
       <nav id="navbar" class="navbar">
