--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero">
     <div class="hero-container" data-aos="fade-up">
-      <h1>Welcome </h1>
+      <h1>Mainali Suppliers At a Glance</h1>
       <a href="#portfolio-details" class="btn-get-started scrollto"><i class="bx bx-chevrons-down"></i></a>
     </div>
   </section><!-- End Hero -->
@@ -112,7 +112,7 @@
         <div class="portfolio-info" data-aos="fade-up" data-aos-delay="200">
           <h3 data-aos="fade-out">Mainali Suppliers</h3>
               <p>
-          This organization is belongs to Mr. <a href="https://www.facebook.com/jageswor.mainali.96"> Jageswor Mainali</a> and was established in 2053 B.S. 
+          Mainali Suppliers is a renowed business form with about a decade of history providing quality services to the consumers. This organization was established by<a href="https://www.facebook.com/jageswor.mainali.96" target="_blank"> Mr. Jageswor Mainali  </a> with the commitment of providing quality services and products to customers.
               </p>
         </div>
       </div>
