--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
   <!-- ======= Hero Section ======= -->
   <section id="hero">
-    <div class="hero-container" data-aos="fade-up">
+    <div class="hero-container" data-aos="zoom-in">
       <h1>Mainali Suppliers At a Glance</h1>
       <a href="#portfolio-details" class="btn-get-started scrollto"><i class="bx bx-chevrons-down"></i></a>
     </div>
