--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
   </div>
 </section><!-- End Portfolio Details Section -->
 
-</main><!-- End #main -->
+<!-- End #main -->
 
     <!-- ======= Services Section ======= -->
     <section id="services" class="services">
