--- a/index.html
+++ b/index.html
@@ -120,9 +120,8 @@
     </div>
 
   </div>
-</section><!-- End Portfolio Details Section -->
+<!-- End Portfolio Details Section -->
 
-<!-- End #main -->
 
     <!-- ======= Services Section ======= -->
     <section id="services" class="services">
