--- a/index.html
+++ b/index.html
@@ -56,12 +56,13 @@
 
   <!-- ======= Hero Section ======= -->
   <section id="hero">
+    <div class="row gy-4">
     <div class="hero-container" data-aos="fade-up">
       <h1>Mainali Suppliers At a Glance</h1>
       <a href="#portfolio-details" class="btn-get-started scrollto"><i class="bx bx-chevrons-down"></i></a>
     </div>
+    </div>
   </section><!-- End Hero -->
-
 <main id="main">
 
  <!-- ======= Portfolio Details Section ======= -->
